--- a/docker-content/tag-der-technik/experiments/experiments.ipynb
+++ b/docker-content/tag-der-technik/experiments/experiments.ipynb
@@ -35,7 +35,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Evaluation"
+    "#### Evaluation\n",
+    "\n",
+    "You will be asked to rate each LLM-generated response. The order will be random, so you will not know which prompt led to each response beforehand."
    ]
   },
   {
@@ -113,14 +115,17 @@
    "metadata": {},
    "source": [
     "### Step 3 &mdash; Adapt the Experiments\n",
-    "Come up with your own task that should allow for evaluation of the generated results on different topics or scenarios. Examples of such tasks are:\n",
+    "Come up with your own task for the LLM to solve. The task should be a text generation problem, and it should be easy for humans to see how well it has been solved. The problem definition should also include something that is variable, such as different topics or scenarios (like the `TOPICS` list above). This allows you to see how well the LLM can work with different use cases, and gives you more data for the evaluation.\n",
+    "\n",
+    "Examples of such tasks are:\n",
+    "- Generate exam questions for the field of Physics (topics could be: Mechanics, optics, electronics, ...)\n",
     "- Explaining a difficult concept (e.g., what a metaphor is)\n",
     "- Short cooking recipes or lists of ingredients for different meals\n",
     "- Etymologies of different fictional or non-fictional words and phrases\n",
     "- Communication skills: Given a socially difficult situation, the model should provide helpful advice\n",
     "- ...\n",
     "\n",
-    "Modify the code above according to the task you came up with. Make sure to include three fitting prompts resembling different levels of expertise.\n",
+    "Modify the code above according to the task you came up with. Make sure to include three fitting prompts resembling different levels of expertise. These three prompts should all solve the same task, but ask for it in a different way. Including the different topics comes through the use of a `{topic}` placeholder.\n",
     "\n",
     "Run your code and rate the results. Don't forget to click on save.\n",
     "\n",
